--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,17 @@
-language: python
-python:
-    - '3.6'
-notifications:
-  email: false
+language: c
+os: linux
+dist: xenial
+sudo: false
+cache: 
+    apt: true
+    pip: true
+env:
+    global: PYTHON_VERSION=3.7 DISPLAY=:99.0 MNE_LOGGING_LEVEL=warning 
+            TRAVIS_PYTHON_VERSION=3.7 CONDA_VERSION=">=4.3.27" CONDA_ENVIRONMENT="environment.yml"
+            OPENBLAS_NUM_THREADS=1
 install:
-  - sudo apt-get update
-  - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
-  - bash miniconda.sh -b -p $HOME/miniconda
-  - export PATH="$HOME/miniconda/bin:$PATH"
-  - conda config --set always_yes yes --set changeps1 no
-  - conda update -q conda
-  - conda info -a
-  - conda env create -f environment.yml
-  - source activate propofol_spatial_pac
+    - /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -screen 0 1400x900x24 -ac +extension GLX +render -noreset;
+    - git clone --depth 1 git://github.com/astropy/ci-helpers.git
+    - source ci-helpers/travis/setup_conda.sh
+    - python -c 'import mne; mne.datasets.testing.data_path(verbose=True)';
 script: pytest
